--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ html {
   font-size: 62.5%;
   color-scheme: dark light;
 }
+@media only screen and (max-width: 25em) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   min-height: 100vh;
@@ -41,10 +46,15 @@ video {
 
 .main {
   width: min(90%, 80rem);
-  margin: 5rem 0;
+  margin: 3rem 0;
   display: flex;
   flex-direction: column;
-  row-gap: 6rem;
+  row-gap: 7rem;
+}
+@media only screen and (max-width: 50em) {
+  .main {
+    padding: 0 2rem;
+  }
 }
 .main__header {
   width: 100%;
@@ -54,14 +64,20 @@ video {
   align-items: center;
 }
 .main__logo-box {
-  width: 10%;
+  width: 15%;
+}
+@media only screen and (max-width: 50em) {
+  .main__logo-box {
+    width: 25%;
+    margin-bottom: 5rem;
+  }
 }
 .main__heading {
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: 4rem;
 }
 .main__span {
   color: var(--color-very-dark-blue);
@@ -81,6 +97,11 @@ video {
   column-gap: 1rem;
   row-gap: 0.5rem;
 }
+@media only screen and (max-width: 50em) {
+  .main__form {
+    grid-template-columns: 1fr;
+  }
+}
 .main__input {
   width: 100%;
   border: 1px solid var(--color-gray);
@@ -95,6 +116,9 @@ video {
   font-size: 2rem;
   opacity: 0.6;
 }
+.main__input:focus {
+  outline: none;
+}
 .main__error {
   width: 100%;
   margin-left: 2rem;
@@ -102,6 +126,54 @@ video {
   display: none;
   font-size: 1.6rem;
   font-style: italic;
+}
+@media only screen and (max-width: 50em) {
+  .main__error {
+    text-align: center;
+    margin-left: 0;
+    margin-bottom: 2rem;
+    grid-row: 2/span 1;
+  }
+}
+.main__footer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+  align-items: center;
+}
+@media only screen and (max-width: 50em) {
+  .main__footer {
+    margin-top: 10rem;
+  }
+}
+.main__socials-container {
+  display: flex;
+  column-gap: 2rem;
+}
+.main__socials-box:link, .main__socials-box:visited {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 1px solid var(--color-gray);
+  padding: 1rem;
+  transition: all 0.2s;
+}
+.main__socials-box:hover {
+  background-color: var(--color-blue);
+}
+.main__socials-img {
+  width: 100%;
+  height: 100%;
+}
+.main__socials-icon {
+  fill: var(--color-blue);
+  transition: fill 0.2s;
+}
+.main__socials-box:hover .main__socials-icon {
+  fill: #fff;
+}
+.main__footer-copyright {
+  text-align: center;
 }
 
 .heading--1 {
@@ -122,8 +194,21 @@ video {
   cursor: pointer;
   transition: opacity 0.2s;
 }
+@media only screen and (max-width: 50em) {
+  .btn--submit {
+    margin-top: 1.5rem;
+  }
+}
 .btn--submit:hover {
   opacity: 0.8;
+}
+
+.unhide {
+  display: block;
+}
+
+.input-error-border {
+  border-color: var(--color-light-red);
 }
 
 /*# sourceMappingURL=style.css.map */
