--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,9 @@
   --color-very-dark-blue: hsl(209, 33%, 12%);
 }
 
+$bp-1: 50em; // 800px
+$bp-2: 25em; // 400px
+
 *,
 *::after,
 *::before {
@@ -18,6 +21,10 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   color-scheme: dark light;
+
+  @media only screen and (max-width: $bp-2) {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -42,11 +49,15 @@ video {
 
 .main {
   width: min(90%, 80rem);
-  margin: 5rem 0;
+  margin: 3rem 0;
 
   display: flex;
   flex-direction: column;
-  row-gap: 6rem;
+  row-gap: 7rem;
+
+  @media only screen and (max-width: $bp-1) {
+    padding: 0 2rem;
+  }
 
   &__header {
     width: 100%;
@@ -58,7 +69,12 @@ video {
   }
 
   &__logo-box {
-    width: 10%;
+    width: 15%;
+
+    @media only screen and (max-width: $bp-1) {
+      width: 25%;
+      margin-bottom: 5rem;
+    }
   }
 
   &__heading {
@@ -67,7 +83,7 @@ video {
 
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
+    row-gap: 4rem;
   }
 
   &__span {
@@ -91,6 +107,10 @@ video {
     grid-template-columns: 2.5fr 1fr;
     column-gap: 1rem;
     row-gap: 0.5rem;
+
+    @media only screen and (max-width: $bp-1) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__input {
@@ -107,6 +127,10 @@ video {
       font-size: 2rem;
       opacity: 0.6;
     }
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &__error {
@@ -116,6 +140,64 @@ video {
     display: none;
     font-size: 1.6rem;
     font-style: italic;
+
+    @media only screen and (max-width: $bp-1) {
+      text-align: center;
+      margin-left: 0;
+      margin-bottom: 2rem;
+
+      grid-row: 2 / span 1;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-1) {
+      margin-top: 10rem;
+    }
+  }
+
+  &__socials-container {
+    display: flex;
+    column-gap: 2rem;
+  }
+
+  &__socials-box {
+    &:link,
+    &:visited {
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      border: 1px solid var(--color-gray);
+      padding: 1rem;
+      transition: all 0.2s;
+    }
+
+    &:hover {
+      background-color: var(--color-blue);
+    }
+  }
+
+  &__socials-img {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__socials-icon {
+    fill: var(--color-blue);
+    transition: fill 0.2s;
+  }
+
+  &__socials-box:hover &__socials-icon {
+    fill: #fff;
+  }
+
+  &__footer-copyright {
+    text-align: center;
   }
 }
 
@@ -140,8 +222,22 @@ video {
     cursor: pointer;
     transition: opacity 0.2s;
 
+    @media only screen and (max-width: $bp-1) {
+      margin-top: 1.5rem;
+    }
+
     &:hover {
       opacity: 0.8;
     }
   }
+}
+
+// State change style
+
+.unhide {
+  display: block;
+}
+
+.input-error-border {
+  border-color: var(--color-light-red);
 }
